# JR_FirstModule

./: .gitignore  bot.py  bot_data  credentials.py  docker-compose.yml  gpt.py  pyproject.toml  util.py
.github/workflows/: deploy.yml
resources/features/: echo.py  gpt_question.py  idea_generator.py  menu.py  quiz.py  random_fact.py  random_word.py  start.py  talk_with_famous_person.py  translator.py
resources/messages/: gpt.txt  idea.txt  main.txt  quiz.txt  random_word.txt  start.txt  talk.txt  translator.txt
resources/prompts/: idea.txt  random_word.txt  translator.txt
