[project]
name = "jr-firstmodule"
version = "0.1.0"
description = ""
authors = [
    {name = "PaulNero",email = "58290662+PaulNero@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.13)",
    "aiosignal (==1.4.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "attrs (==25.3.0)",
    "certifi (==2025.6.15)",
    "charset-normalizer (==3.4.2)",
    "distro (==1.9.0)",
    "dotenv (==0.9.9)",
    "frozenlist (==1.7.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.25.2)",
    "idna (==3.10)",
    "jiter (==0.10.0)",
    "multidict (==6.6.3)",
    "openai (==0.27.0)",
    "propcache (==0.3.2)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.1)",
    "python-telegram-bot (==20.7)",
    "requests (==2.32.4)",
    "sniffio (==1.3.1)",
    "telegram (==0.0.1)",
    "tqdm (==4.67.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "urllib3 (==2.5.0)",
    "yarl (==1.20.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
